add webservice method